# TER_Voxelisation

./: CMakeLists.txt  Space.cpp  Space.h  TER_Voxelisation.pro  converter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshviewerwidget.h  ressources.qrc  world.h
Forms/: MainWindow.ui
Sources/: MainWindow.cpp  main.cpp
TER_Voxelisation-sansDGtal/: Space.cpp  Space.h  TER_Voxelisation.pro  mainwindow.cpp  mainwindow.ui  meshviewerwidget.cpp  meshviewerwidget.h
